P3/Lex_y_Yacc/y.output
Estado 11 conflictos: 8 desplazamiento/reducción
Estado 28 conflictos: 9 desplazamiento/reducción
Estado 110 conflictos: 8 desplazamiento/reducción
Estado 111 conflictos: 8 desplazamiento/reducción
Estado 142 conflictos: 1 desplazamiento/reducción
Estado 152 conflictos: 8 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_subprogs Sentencias Fin_de_bloque

    3 Declar_subprogs: Declar_subprogs Declar_subprog
    4                | %empty

    5 Declar_subprog: Cabecera_subprog bloque

    6 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables
    7                            | %empty

    8 Marca_ini_declar_variables: INIDEC

    9 Marca_fin_declar_variables: FINDEC

   10 Cabecera_programa: MAIN

   11 Inicio_de_bloque: LLAIZQ

   12 Fin_de_bloque: LLADER

   13 Variables_locales: Variables_locales Cuerpo_declar_variables
   14                  | Cuerpo_declar_variables

   15 Cuerpo_declar_variables: tipo lista_declaracion_variables PYC

   16 Cabecera_subprog: tipo variable PARIZQ argumentos PARDER
   17                 | tipo variable PARIZQ PARDER

   18 argumentos: tipo variable
   19           | argumentos COMA tipo variable
   20           | error

   21 variable: identificador
   22         | elemento_de_array

   23 elemento_de_array: identificador CORIZQ expresion CORDER
   24                  | identificador CORIZQ expresion COMA expresion CORDER

   25 Sentencias: Sentencias Sentencia
   26           | Sentencia

   27 Sentencia: bloque
   28          | sentencia_asignacion
   29          | sentencia_si
   30          | sentencia_mientras
   31          | sentencia_hacer_hasta
   32          | sentencia_entrada
   33          | sentencia_salida
   34          | sentencia_retornar
   35          | %empty

   36 sentencia_asignacion: variable ASIG expresion PYC

   37 sentencia_si: SI PARIZQ expresion PARDER Sentencia
   38             | SI PARIZQ expresion PARDER Sentencia SINO Sentencia

   39 sentencia_mientras: MIENTRAS PARIZQ expresion PARDER Sentencia

   40 sentencia_hacer_hasta: HACER Sentencia HASTA PARIZQ expresion PARDER PYC

   41 sentencia_entrada: ENTRADA lista_variables PYC

   42 sentencia_salida: SALIDA lista_expresiones_cadena PYC

   43 sentencia_retornar: DEVOLVER expresion PYC

   44 lista_expresiones_cadena: lista_expresiones_cadena COMA expresion_cadena
   45                         | expresion_cadena

   46 expresion_cadena: expresion
   47                 | cadena

   48 lista_variables: variable
   49                | lista_variables COMA variable

   50 lista_declaracion_variables: variable
   51                            | lista_declaracion_variables COMA variable
   52                            | error

   53 lista_expresiones: expresion
   54                  | lista_expresiones COMA expresion

   55 expresion: PARIZQ expresion PARDER
   56          | OPNEG expresion
   57          | OPSUMA expresion
   58          | OPRESTA expresion
   59          | expresion OPMULT expresion
   60          | expresion OPDIV expresion
   61          | expresion OPMULTM expresion
   62          | expresion OPAND expresion
   63          | expresion OPOR expresion
   64          | expresion OPEQ expresion
   65          | expresion OPNEQ expresion
   66          | expresion OPLEQ expresion
   67          | expresion OPGEQ expresion
   68          | expresion OPLESS expresion
   69          | expresion OPGR expresion
   70          | expresion OPMOD expresion
   71          | expresion OPSUMA expresion
   72          | expresion OPRESTA expresion
   73          | variable
   74          | constante
   75          | funcion
   76          | error

   77 funcion: identificador PARIZQ PARDER
   78        | identificador PARIZQ lista_expresiones PARDER

   79 tipo: TIPOEL

   80 cadena: CADENA

   81 identificador: IDEN

   82 constante: CONST
   83          | CORIZQ ini_elementos_array CORDER

   84 ini_elementos_array: ini_elementos_array PYC lista_expresiones
   85                    | lista_expresiones


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 20 52 76
    OPOR (258) 63
    OPAND (259) 62
    OPEQ (260) 64
    OPNEQ (261) 65
    OPLEQ (262) 66
    OPGEQ (263) 67
    OPLESS (264) 68
    OPGR (265) 69
    OPSUMA (266) 57 71
    OPRESTA (267) 58 72
    OPMULT (268) 59
    OPMULTM (269) 61
    OPDIV (270) 60
    OPMOD (271) 70
    OPNEG (272) 56
    CONST (273) 82
    IDEN (274) 81
    CADENA (275) 80
    ASIG (276) 36
    CORIZQ (277) 23 24 83
    CORDER (278) 23 24 83
    PARIZQ (279) 16 17 37 38 39 40 55 77 78
    PARDER (280) 16 17 37 38 39 40 55 77 78
    LLAIZQ (281) 11
    LLADER (282) 12
    PYC (283) 15 36 40 41 42 43 84
    COMA (284) 19 24 44 49 51 54
    SI (285) 37 38
    SINO (286) 38
    MIENTRAS (287) 39
    HACER (288) 40
    HASTA (289) 40
    INIDEC (290) 8
    FINDEC (291) 9
    SALIDA (292) 42
    ENTRADA (293) 41
    DEVOLVER (294) 43
    MAIN (295) 10
    TIPOEL (296) 79


No terminales con las reglas donde aparecen

    $accept (42)
        on left: 0
    Programa (43)
        on left: 1
        on right: 0
    bloque (44)
        on left: 2
        on right: 1 5 27
    Declar_subprogs (45)
        on left: 3 4
        on right: 2 3
    Declar_subprog (46)
        on left: 5
        on right: 3
    Declar_de_variables_locales (47)
        on left: 6 7
        on right: 2
    Marca_ini_declar_variables (48)
        on left: 8
        on right: 6
    Marca_fin_declar_variables (49)
        on left: 9
        on right: 6
    Cabecera_programa (50)
        on left: 10
        on right: 1
    Inicio_de_bloque (51)
        on left: 11
        on right: 2
    Fin_de_bloque (52)
        on left: 12
        on right: 2
    Variables_locales (53)
        on left: 13 14
        on right: 6 13
    Cuerpo_declar_variables (54)
        on left: 15
        on right: 13 14
    Cabecera_subprog (55)
        on left: 16 17
        on right: 5
    argumentos (56)
        on left: 18 19 20
        on right: 16 19
    variable (57)
        on left: 21 22
        on right: 16 17 18 19 36 48 49 50 51 73
    elemento_de_array (58)
        on left: 23 24
        on right: 22
    Sentencias (59)
        on left: 25 26
        on right: 2 25
    Sentencia (60)
        on left: 27 28 29 30 31 32 33 34 35
        on right: 25 26 37 38 39 40
    sentencia_asignacion (61)
        on left: 36
        on right: 28
    sentencia_si (62)
        on left: 37 38
        on right: 29
    sentencia_mientras (63)
        on left: 39
        on right: 30
    sentencia_hacer_hasta (64)
        on left: 40
        on right: 31
    sentencia_entrada (65)
        on left: 41
        on right: 32
    sentencia_salida (66)
        on left: 42
        on right: 33
    sentencia_retornar (67)
        on left: 43
        on right: 34
    lista_expresiones_cadena (68)
        on left: 44 45
        on right: 42 44
    expresion_cadena (69)
        on left: 46 47
        on right: 44 45
    lista_variables (70)
        on left: 48 49
        on right: 41 49
    lista_declaracion_variables (71)
        on left: 50 51 52
        on right: 15 51
    lista_expresiones (72)
        on left: 53 54
        on right: 54 78 84 85
    expresion (73)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 23 24 36 37 38 39 40 43 46 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    funcion (74)
        on left: 77 78
        on right: 75
    tipo (75)
        on left: 79
        on right: 15 16 17 18 19
    cadena (76)
        on left: 80
        on right: 47
    identificador (77)
        on left: 81
        on right: 21 23 24 77 78
    constante (78)
        on left: 82 83
        on right: 74
    ini_elementos_array (79)
        on left: 84 85
        on right: 83 84


Estado 0

    0 $accept: . Programa $end

    MAIN  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

   10 Cabecera_programa: MAIN .

    $default  reduce usando la regla 10 (Cabecera_programa)


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 Programa: Cabecera_programa . bloque

    LLAIZQ  desplazar e ir al estado 5

    bloque            ir al estado 6
    Inicio_de_bloque  ir al estado 7


Estado 4

    0 $accept: Programa $end .

    $default  aceptar


Estado 5

   11 Inicio_de_bloque: LLAIZQ .

    $default  reduce usando la regla 11 (Inicio_de_bloque)


Estado 6

    1 Programa: Cabecera_programa bloque .

    $default  reduce usando la regla 1 (Programa)


Estado 7

    2 bloque: Inicio_de_bloque . Declar_de_variables_locales Declar_subprogs Sentencias Fin_de_bloque

    INIDEC  desplazar e ir al estado 8

    $default  reduce usando la regla 7 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 9
    Marca_ini_declar_variables   ir al estado 10


Estado 8

    8 Marca_ini_declar_variables: INIDEC .

    $default  reduce usando la regla 8 (Marca_ini_declar_variables)


Estado 9

    2 bloque: Inicio_de_bloque Declar_de_variables_locales . Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 4 (Declar_subprogs)

    Declar_subprogs  ir al estado 11


Estado 10

    6 Declar_de_variables_locales: Marca_ini_declar_variables . Variables_locales Marca_fin_declar_variables

    TIPOEL  desplazar e ir al estado 12

    Variables_locales        ir al estado 13
    Cuerpo_declar_variables  ir al estado 14
    tipo                     ir al estado 15


Estado 11

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_subprogs . Sentencias Fin_de_bloque
    3 Declar_subprogs: Declar_subprogs . Declar_subprog

    IDEN      desplazar e ir al estado 16
    LLAIZQ    desplazar e ir al estado 5
    SI        desplazar e ir al estado 17
    MIENTRAS  desplazar e ir al estado 18
    HACER     desplazar e ir al estado 19
    SALIDA    desplazar e ir al estado 20
    ENTRADA   desplazar e ir al estado 21
    DEVOLVER  desplazar e ir al estado 22
    TIPOEL    desplazar e ir al estado 12

    IDEN      [reduce usando la regla 35 (Sentencia)]
    LLAIZQ    [reduce usando la regla 35 (Sentencia)]
    SI        [reduce usando la regla 35 (Sentencia)]
    MIENTRAS  [reduce usando la regla 35 (Sentencia)]
    HACER     [reduce usando la regla 35 (Sentencia)]
    SALIDA    [reduce usando la regla 35 (Sentencia)]
    ENTRADA   [reduce usando la regla 35 (Sentencia)]
    DEVOLVER  [reduce usando la regla 35 (Sentencia)]
    $default  reduce usando la regla 35 (Sentencia)

    bloque                 ir al estado 23
    Declar_subprog         ir al estado 24
    Inicio_de_bloque       ir al estado 7
    Cabecera_subprog       ir al estado 25
    variable               ir al estado 26
    elemento_de_array      ir al estado 27
    Sentencias             ir al estado 28
    Sentencia              ir al estado 29
    sentencia_asignacion   ir al estado 30
    sentencia_si           ir al estado 31
    sentencia_mientras     ir al estado 32
    sentencia_hacer_hasta  ir al estado 33
    sentencia_entrada      ir al estado 34
    sentencia_salida       ir al estado 35
    sentencia_retornar     ir al estado 36
    tipo                   ir al estado 37
    identificador          ir al estado 38


Estado 12

   79 tipo: TIPOEL .

    $default  reduce usando la regla 79 (tipo)


Estado 13

    6 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales . Marca_fin_declar_variables
   13 Variables_locales: Variables_locales . Cuerpo_declar_variables

    FINDEC  desplazar e ir al estado 39
    TIPOEL  desplazar e ir al estado 12

    Marca_fin_declar_variables  ir al estado 40
    Cuerpo_declar_variables     ir al estado 41
    tipo                        ir al estado 15


Estado 14

   14 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 14 (Variables_locales)


Estado 15

   15 Cuerpo_declar_variables: tipo . lista_declaracion_variables PYC

    error  desplazar e ir al estado 42
    IDEN   desplazar e ir al estado 16

    variable                     ir al estado 43
    elemento_de_array            ir al estado 27
    lista_declaracion_variables  ir al estado 44
    identificador                ir al estado 38


Estado 16

   81 identificador: IDEN .

    $default  reduce usando la regla 81 (identificador)


Estado 17

   37 sentencia_si: SI . PARIZQ expresion PARDER Sentencia
   38             | SI . PARIZQ expresion PARDER Sentencia SINO Sentencia

    PARIZQ  desplazar e ir al estado 45


Estado 18

   39 sentencia_mientras: MIENTRAS . PARIZQ expresion PARDER Sentencia

    PARIZQ  desplazar e ir al estado 46


Estado 19

   40 sentencia_hacer_hasta: HACER . Sentencia HASTA PARIZQ expresion PARDER PYC

    IDEN      desplazar e ir al estado 16
    LLAIZQ    desplazar e ir al estado 5
    SI        desplazar e ir al estado 17
    MIENTRAS  desplazar e ir al estado 18
    HACER     desplazar e ir al estado 19
    SALIDA    desplazar e ir al estado 20
    ENTRADA   desplazar e ir al estado 21
    DEVOLVER  desplazar e ir al estado 22

    $default  reduce usando la regla 35 (Sentencia)

    bloque                 ir al estado 23
    Inicio_de_bloque       ir al estado 7
    variable               ir al estado 26
    elemento_de_array      ir al estado 27
    Sentencia              ir al estado 47
    sentencia_asignacion   ir al estado 30
    sentencia_si           ir al estado 31
    sentencia_mientras     ir al estado 32
    sentencia_hacer_hasta  ir al estado 33
    sentencia_entrada      ir al estado 34
    sentencia_salida       ir al estado 35
    sentencia_retornar     ir al estado 36
    identificador          ir al estado 38


Estado 20

   42 sentencia_salida: SALIDA . lista_expresiones_cadena PYC

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CADENA   desplazar e ir al estado 53
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable                  ir al estado 56
    elemento_de_array         ir al estado 27
    lista_expresiones_cadena  ir al estado 57
    expresion_cadena          ir al estado 58
    expresion                 ir al estado 59
    funcion                   ir al estado 60
    cadena                    ir al estado 61
    identificador             ir al estado 62
    constante                 ir al estado 63


Estado 21

   41 sentencia_entrada: ENTRADA . lista_variables PYC

    IDEN  desplazar e ir al estado 16

    variable           ir al estado 64
    elemento_de_array  ir al estado 27
    lista_variables    ir al estado 65
    identificador      ir al estado 38


Estado 22

   43 sentencia_retornar: DEVOLVER . expresion PYC

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 66
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 23

   27 Sentencia: bloque .

    $default  reduce usando la regla 27 (Sentencia)


Estado 24

    3 Declar_subprogs: Declar_subprogs Declar_subprog .

    $default  reduce usando la regla 3 (Declar_subprogs)


Estado 25

    5 Declar_subprog: Cabecera_subprog . bloque

    LLAIZQ  desplazar e ir al estado 5

    bloque            ir al estado 67
    Inicio_de_bloque  ir al estado 7


Estado 26

   36 sentencia_asignacion: variable . ASIG expresion PYC

    ASIG  desplazar e ir al estado 68


Estado 27

   22 variable: elemento_de_array .

    $default  reduce usando la regla 22 (variable)


Estado 28

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_subprogs Sentencias . Fin_de_bloque
   25 Sentencias: Sentencias . Sentencia

    IDEN      desplazar e ir al estado 16
    LLAIZQ    desplazar e ir al estado 5
    LLADER    desplazar e ir al estado 69
    SI        desplazar e ir al estado 17
    MIENTRAS  desplazar e ir al estado 18
    HACER     desplazar e ir al estado 19
    SALIDA    desplazar e ir al estado 20
    ENTRADA   desplazar e ir al estado 21
    DEVOLVER  desplazar e ir al estado 22

    IDEN      [reduce usando la regla 35 (Sentencia)]
    LLAIZQ    [reduce usando la regla 35 (Sentencia)]
    LLADER    [reduce usando la regla 35 (Sentencia)]
    SI        [reduce usando la regla 35 (Sentencia)]
    MIENTRAS  [reduce usando la regla 35 (Sentencia)]
    HACER     [reduce usando la regla 35 (Sentencia)]
    SALIDA    [reduce usando la regla 35 (Sentencia)]
    ENTRADA   [reduce usando la regla 35 (Sentencia)]
    DEVOLVER  [reduce usando la regla 35 (Sentencia)]

    bloque                 ir al estado 23
    Inicio_de_bloque       ir al estado 7
    Fin_de_bloque          ir al estado 70
    variable               ir al estado 26
    elemento_de_array      ir al estado 27
    Sentencia              ir al estado 71
    sentencia_asignacion   ir al estado 30
    sentencia_si           ir al estado 31
    sentencia_mientras     ir al estado 32
    sentencia_hacer_hasta  ir al estado 33
    sentencia_entrada      ir al estado 34
    sentencia_salida       ir al estado 35
    sentencia_retornar     ir al estado 36
    identificador          ir al estado 38


Estado 29

   26 Sentencias: Sentencia .

    $default  reduce usando la regla 26 (Sentencias)


Estado 30

   28 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 28 (Sentencia)


Estado 31

   29 Sentencia: sentencia_si .

    $default  reduce usando la regla 29 (Sentencia)


Estado 32

   30 Sentencia: sentencia_mientras .

    $default  reduce usando la regla 30 (Sentencia)


Estado 33

   31 Sentencia: sentencia_hacer_hasta .

    $default  reduce usando la regla 31 (Sentencia)


Estado 34

   32 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 32 (Sentencia)


Estado 35

   33 Sentencia: sentencia_salida .

    $default  reduce usando la regla 33 (Sentencia)


Estado 36

   34 Sentencia: sentencia_retornar .

    $default  reduce usando la regla 34 (Sentencia)


Estado 37

   16 Cabecera_subprog: tipo . variable PARIZQ argumentos PARDER
   17                 | tipo . variable PARIZQ PARDER

    IDEN  desplazar e ir al estado 16

    variable           ir al estado 72
    elemento_de_array  ir al estado 27
    identificador      ir al estado 38


Estado 38

   21 variable: identificador .
   23 elemento_de_array: identificador . CORIZQ expresion CORDER
   24                  | identificador . CORIZQ expresion COMA expresion CORDER

    CORIZQ  desplazar e ir al estado 73

    $default  reduce usando la regla 21 (variable)


Estado 39

    9 Marca_fin_declar_variables: FINDEC .

    $default  reduce usando la regla 9 (Marca_fin_declar_variables)


Estado 40

    6 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables .

    $default  reduce usando la regla 6 (Declar_de_variables_locales)


Estado 41

   13 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 13 (Variables_locales)


Estado 42

   52 lista_declaracion_variables: error .

    $default  reduce usando la regla 52 (lista_declaracion_variables)


Estado 43

   50 lista_declaracion_variables: variable .

    $default  reduce usando la regla 50 (lista_declaracion_variables)


Estado 44

   15 Cuerpo_declar_variables: tipo lista_declaracion_variables . PYC
   51 lista_declaracion_variables: lista_declaracion_variables . COMA variable

    PYC   desplazar e ir al estado 74
    COMA  desplazar e ir al estado 75


Estado 45

   37 sentencia_si: SI PARIZQ . expresion PARDER Sentencia
   38             | SI PARIZQ . expresion PARDER Sentencia SINO Sentencia

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 76
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 46

   39 sentencia_mientras: MIENTRAS PARIZQ . expresion PARDER Sentencia

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 77
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 47

   40 sentencia_hacer_hasta: HACER Sentencia . HASTA PARIZQ expresion PARDER PYC

    HASTA  desplazar e ir al estado 78


Estado 48

   76 expresion: error .

    $default  reduce usando la regla 76 (expresion)


Estado 49

   57 expresion: OPSUMA . expresion

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 79
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 50

   58 expresion: OPRESTA . expresion

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 80
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 51

   56 expresion: OPNEG . expresion

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 81
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 52

   82 constante: CONST .

    $default  reduce usando la regla 82 (constante)


Estado 53

   80 cadena: CADENA .

    $default  reduce usando la regla 80 (cadena)


Estado 54

   83 constante: CORIZQ . ini_elementos_array CORDER

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable             ir al estado 56
    elemento_de_array    ir al estado 27
    lista_expresiones    ir al estado 82
    expresion            ir al estado 83
    funcion              ir al estado 60
    identificador        ir al estado 62
    constante            ir al estado 63
    ini_elementos_array  ir al estado 84


Estado 55

   55 expresion: PARIZQ . expresion PARDER

    error    desplazar e ir al estado 48
    OPSUMA   desplazar e ir al estado 49
    OPRESTA  desplazar e ir al estado 50
    OPNEG    desplazar e ir al estado 51
    CONST    desplazar e ir al estado 52
    IDEN     desplazar e ir al estado 16
    CORIZQ   desplazar e ir al estado 54
    PARIZQ   desplazar e ir al estado 55

    variable           ir al estado 56
    elemento_de_array  ir al estado 27
    expresion          ir al estado 85
    funcion            ir al estado 60
    identificador      ir al estado 62
    constante          ir al estado 63


Estado 56

   73 expresion: variable .

    $default  reduce usando la regla 73 (expresion)


Estado 57

   42 sentencia_salida: SALIDA lista_expresiones_cadena . PYC
   44 lista_expresiones_cadena: lista_expresiones_cadena . COMA expresion_cadena

    PYC   desplazar e ir al estado 86
    COMA  desplazar e ir al estado 87


Estado 58

   45 lista_expresiones_cadena: expresion_cadena .

    $default  reduce usando la regla 45 (lista_expresiones_cadena)


Estado 59

   46 expresion_cadena: expresion .
   59 expresion: expresion . OPMULT expresion
   60          | expresion . OPDIV expresion
   61          | expresion . OPMULTM expresion
   62          | expresion . OPAND expresion
   63          | expresion . OPOR expresion
   64          | expresion . OPEQ expresion
   65          | expresion . OPNEQ expresion
   66          | expresion . OPLEQ expresion
   67          | expresion . OPGEQ expresion
   68          | expresion . OPLESS expresion
   69          | expresion . OPGR expresion
   70          | expresion . OPMOD expresion
   71          | expresion . OPSUMA expresion
   72          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 88
    OPAND    desplazar e ir al estado 89
    OPEQ     desplazar e ir al estado 90
    OPNEQ    desplazar e ir al estado 91
    OPLEQ    desplazar e ir al estado 92
    OPGEQ    desplazar e ir al estado 93
    OPLESS   desplazar e ir al estado 94
    OPGR     desplazar e ir al estado 95
    OPSUMA   desplazar e ir al estado 96
    OPRESTA  desplazar e ir al estado 97
    OPMULT   desplazar e ir al estado 98
    OPMULTM  desplazar e ir al estado 99
    OPDIV    desplazar e ir al estado 100
    OPMOD    desplazar e ir al estado 101

    $default  reduce usando la regla 46 (expresion_cadena)


Estado 60

   75 expresion: funcion .

    $default  reduce usando la regla 75 (expresion)


Estado 61

   47 expresion_cadena: cadena .

    $default  reduce usando la regla 47 (expresion_cadena)


Estado 62

   21 variable: identificador .
   23 elemento_de_array: identificador . CORIZQ expresion CORDER
   24                  | identificador . CORIZQ expresion COMA expresion CORDER
   77 funcion: identificador . PARIZQ PARDER
   78        | identificador . PARIZQ lista_expresiones PARDER

    CORIZQ  desplazar e ir al estado 73
    PARIZQ  desplazar e ir al estado 102

    $default  reduce usando la regla 21 (variable)


Estado 63

   74 expresion: constante .

    $default  reduce usando la regla 74 (expresion)


Estado 64

   48 lista_variables: variable .

    $default  reduce usando la regla 48 (lista_variables)


Estado 65

   41 sentencia_entrada: ENTRADA lista_variables . PYC
   49 lista_variables: lista_variables . COMA variable

    PYC   desplazar e ir al estado 103
    COMA  desplazar e ir al estado 104


Estado 66

   43 sentencia_retornar: DEVOLVER expresion . PYC
   59 expresion: expresion . OPMULT expresion
   60          | expresion . OPDIV expresion
   61          | expresion . OPMULTM expresion
   62          | expresion . OPAND expresion
   63          | expresion . OPOR expresion
   64          | expresion . OPEQ expresion
   65          | expresion . OPNEQ expresion
   66          | expresion . OPLEQ expresion
   67          | expresion . OPGEQ expresion
   68          | expresion . OPLESS expresion
   69          | expresion . OPGR expresion
   70          | expresion . OPMOD expresion
   71          | expresion . OPSUMA expresion
   72          | expresion . OPRESTA expresion
